Fix legacy 'navigation' widget alignment, clarfix and adds styles for selected item

--- a/bkb-dev.less
+++ b/bkb-dev.less
@@ -1780,7 +1780,7 @@ input, textarea {
 
 // Navigation Alignment
 div.widget .extendednavigation,
-div.widget.extendednavigation {
+div.widget .navigation {
 	 ul li {
 		 float: none;
 		 display: inline-block;
@@ -2893,6 +2893,8 @@ input:focus:-ms-input-placeholder {
 // Extended Navigation Styles
 //===========================
 
+// Shares styles with legace 'navigation' widget
+
 .widget {
     .extendednavigation, .navigation {
         ul {
@@ -2962,6 +2964,19 @@ input:focus:-ms-input-placeholder {
 // Open Navigation Class
 .widget .extendednavigation .open, .widget .navigation .open {
     display: block;
+}
+
+//===========================
+// Navigation Styles
+//===========================
+
+.widget {
+    .navigation {
+        .clearfix;
+        li.selected a .text {
+            color: @color-swatch2;
+        }
+    }
 }
 
 //===============
