--- a/defaults/widgets/navigation.less
+++ b/defaults/widgets/navigation.less
@@ -129,7 +129,7 @@
 
 // Navigation Alignment
 div.widget .extendednavigation,
-div.widget.extendednavigation {
+div.widget .navigation {
 	 ul li {
 		 float: none;
 		 display: inline-block;
